--- a/aboutgroup.html
+++ b/aboutgroup.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>About Group</title>
-	<link rel="stylesheet" href="aboutwidget.css">
+	<link rel="stylesheet" href="aboutgroup.css">
 	<link rel="icon" href="./favicon.ico" type="image/x-icon">
 	<script src="https://kit.fontawesome.com/3cfbe41a4b.js" crossorigin="anonymous"></script>
 	 <link rel="preconnect" href="https://fonts.gstatic.com">
