--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						</div>
 						<div class="space"></div>
 						<div class="hobby1">
-							<div class="container-3 scale"><p class="infotext"> <a href="abouthobby.html">Ігри</a></p></div>
+							<div class="container-3 scale"><p class="infotext"> <a href="js_tests.html">Скрипти</a></p></div>
 						</div>
 						<div class="hobby2">
 							<div class="container-3 scale"><p class="infotext"> <a href="abouthobby.html">Фільми</a></p></div>
