--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<div class="container-3 scale"><p class="infotext"> <a href="js_tests.html">Скрипти</a></p></div>
 						</div>
 						<div class="hobby2">
-							<div class="container-3 scale"><p class="infotext"> <a href="heyshin.html">Вайфу</a></p></div>
+							<div class="container-3 scale"><p class="infotext"> <a href="geyshin.html">Вайфу</a></p></div>
 						</div>
 						<div class="hobby3">
 							<div class="container-3 scale"><p class="infotext"> <a href="abouthobby.html">Книги</a></p></div>
